# afl-fantasy-agent

./: .env.example  Dockerfile  pyproject.toml  railway.toml
afl_fantasy/: config.py  main.py  orchestrator.py  scheduler.py
afl_fantasy/agents/: base.py  classic_agent.py  form_agent.py  kol_agent.py  opponent_agent.py
afl_fantasy/data/: fetcher.py  models.py
afl_fantasy/db/: schema.sql  store.py
afl_fantasy/notifications/: telegram.py
tools/: extract_cookie.py  verify_squads.py
